# Depth-Map-Project

./: .gitignore  .pre-commit-config.yaml  CAMERA_FEATURE.md  CLEAN_PROJECT_SUMMARY.md  DEPTH_IMPROVEMENTS.md  ENHANCED_DEPTH_IMPROVEMENTS.md  LICENSE  MODEL_CACHING_GUIDE.md  MODEL_CACHING_SUMMARY.md  README.md  app.py  demo.py  environment.yml  manage_models.py  pyproject.toml  requirements.txt  run_app.py  run_flask.bat  run_flask.sh  setup_models.py  setup_vscode.py  test_enhanced_depth.py  test_run.py
.github/workflows/: ci.yml
src/depthmap/: __init__.py
src/depthmap/classical/: __init__.py  calibration.py  cli.py  postprocessing.py  rectification.py  stereo_depth.py
src/depthmap/datasets/: __init__.py  cli.py  kitti.py  nyu_depth.py
src/depthmap/eval/: __init__.py  cli.py  metrics.py  plotting.py
src/depthmap/generative/: __init__.py  base.py  cli.py  midas.py  transforms.py
src/depthmap/utils/: __init__.py  config.py  io.py  logging.py  model_manager.py  transforms.py  visualization.py
templates/: camera_debug.html  index.html
tests/: test_classical.py
